@@ -723,6 +723,9 @@ Extension Modules
 Tests
 -----
 
+- Issue #15324: Fix regrtest parsing of --fromfile, --match, and --randomize
+  options.
+
 - Issue #16664: Add regression tests for glob's behaviour concerning entries
   starting with a ".".  Patch by Sebastian Kreft.
 
